--- a/Resumeweb.html
+++ b/Resumeweb.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Blogs</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="C:\Users\Rajan\Documents\MyPortfolio\Myportfolio\about.html">About</a></li>
+                <li><a href="C:\Users\Rajan\Documents\MyPortfolio\Myportfolio\Contact me.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -24,9 +24,9 @@
             <h2>I'm Shravani Anil Rajvaidya &#128515</h2> <br> 
             <h3><p>I am a Frontend Web Developer.</p><br>
                 <p>You can reach out to me if you needed any help.</h3></p>
-            <a href="">Contact Me</a>
+            <a href="C:\Users\Rajan\Documents\MyPortfolio\Myportfolio\Contact me.html">Contact Me</a>
        </div>   
-       <img src="shravu.jpg" alt="">
+       <img src="pic.jpg" alt="">
     </div>
        </body>
     </body>
